petites corrections